Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

COMMITERS

Do not forget to update this page on the wiki when making changes relevant to developers:
http://docs.joomla.org/index.php?title=Version_1.6_Developer_Notes

26-Jan-2009 Andrew Eddie
 ^ JHtmlGrid::published first argument now takes value or object (deprecated)
 + Added JHtmlList::ordering, deprecated JHtmlList::specificordering

25-Jan-2009 Sam Moffatt
 + Filesystem backup adapter now handles backups (not restores yet)
 # Fixed installers so that they now work properly in PHP 5.2 and the new JObject
 # Fixes to archive system to enable it to work properly
 # Fixed zip library to handle nested zips
 ^ Changed default to hide protected extensions
 + Added extra langauge fail over possibilities
 ^ Fixed issues with JFolder and hidden entries
 
25-Jan-2009 Andrew Eddie
 - Removed JTemplate and Legacy plugin
 + Add Generation 3 access control tables and framework
 + Add JModelList, JModelItem

25-Jan-2009 Rob Schley
 - Removed com_polls and mod_polls.
 # Fixed the admin login form rendering incorrectly after a timeout.
 ^ Changed JRegistry::toString with PHP format to use public properties.
 ^ Changed JConfig in the distribution file to have public properties.
 # Fixed references to com_frontpage in the administrator interface.
 ^ Updated SqueezeBox to 1.1 rc2 for MooTools 1.2.
 + Added JText._() and JText.load() to MooTools 1.2 JavaScript to make JavaScript I18N easier.
 + Added JText::script for JavaScript I18N.
 + Added support for JavaScript I18N in JDocumentHTML.
 ^ Cleaned up the site and administrator index.php files.
 - Removed Foood icons from the administrator and site.
 - Removed images/stories, images/smilies, and images/M_images and other old images.

25-Jan-2009 Anthony Ferrara
 + Added JClass base class
 - Removed JStdClass