@@ -141,7 +141,7 @@ abstract class JModuleHelper
 			// 1.5 or Core
 			$lang->load($module->module);
 			// 1.6 3PD
-			$lang->load( 'joomla', dirname($path));
+			$lang->load( $module->module, dirname($path));
 
 
 			$content = '';
